--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <section>
 <div class="topzera">
-<h1>Oi, eu sou o</h1>
+<h1>Oiii, eu sou o</h1>
 <h2>OTÁVIO QUEIROZ</h2>
 <h3>Atualmente, sou estudante de Desenvolvimento Web na <a href="https://www.betrybe.com/" target="_blank" ><b>Trybe.</b></a></h3>
 </div>
